--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "homepage": "https://rarepearlgirl.github.io/meet",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+   "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
+    "atatus-spa": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1",
-    "redux": "^4.2.1",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.9.3",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
@@ -54,7 +55,6 @@
   "devDependencies": {
     "gh-pages": "^6.0.0",
     "jest-cucumber": "^3.0.1",
-    "jest-environment-jsdom": "^29.7.0",
-    "puppeteer": "^21.5.2"
+    "puppeteer": "^18.1.0"
   }
 }
